assets/css/style.css
/* Normalize: Remove all browser default margins and paddings */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}

/* Common components */
section {
    padding: 60px;
}

/* Utility classes */
.text-right {
    text-align: right;
}
.flex-row {
    display: flex;
}

/* Apply theme */
body {
    color: #39a6b2;
    font-family: Helvetica, Arial, sans-serif;
}

/* Apply styles to <header> */
header {
  display: flex;
  justify-content: space-between;
  padding: 20px 35px;
  background-color: #39a6b2;
  flex-wrap: wrap;
}
header h1 {
    font-weight: bold;
    font-size: 36px;
    color: #fce138;
    margin: 0;
}
header a {
    text-decoration: none; /* Remove browser default underline link style */
    color: #fce138;
}
header nav {
    margin: 7px 0;
}
header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
  }

/* Nav links style different from content links */
header nav ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 1.55vw;
}

/* Apply styles to Hero section */
.hero {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-wrap: wrap;
    background-image: url("../images/flipped-hero-image.jpg");
    background-size: cover; 
    background-position: center;
}
.hero-cta {
    width: 35%;
    text-align: right;
    margin: 3.5%;
    color: #fff;
    font-size: 18px;
    line-height: 1.2;
}
.hero-cta h2 {
    font-style: italic;
    font-size: 55px;
    color: #fce138;
  }
.hero-form {
    padding: 20px;
    border: 3px solid #024e76;
    color: #024e76;
    background-color: #fce138;
    width: 40%;
    margin: 3.5%;
}
.hero-form button {
    padding: 10px 20px;
    border: none;
    font-size: 16px;
    color: #fce138;
    background-color: #024e76;
    cursor: pointer;
}
/* Reposition form relative to the hero section */
.hero {
    position: relative;
}
.hero h3 {
    margin: 0;
    font-size: 24px;
}
.hero p {
    margin: 5px 0 15px 0;
}
.form-input {
    display: block;
    width: 100%;
    padding: 7px 15px;
    border: 1px solid #024e76;
    margin-bottom: 15px;
    font-size: 16px;
    color: #024e76;
}
.hero-form label {
    margin-right: 5px;
}

/* Section utility classes */
.section-title {
    padding-bottom: 20px;
    text-align: center;
    margin: 0 auto 35px auto;
    width: 50%;
    font-size: 48px;
    color: #024e76;
}
.primary-border {
    border-bottom: 3px solid #fce138;
}
.secondary-border {
    border-bottom: 3px solid #39a6b2;
}

/* Apply styles to intro section */
.intro {
    text-align: center;
}
.intro p {
    width: 80%;
    margin: 0 auto; 
    line-height: 1.7;
    font-size: 20px;
    text-align: center;
}

/* Apply style to steps section */
.steps { 
    background: #fce138;
}
.step {
    margin: 50px auto;
    padding-bottom: 50px;
    width: 80%;
    border-bottom: 1px solid #39a6b2;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}
.step h3 {
    color: #024e76;
    font-size: 38px;
    flex: 1 30%; /* Todo: Review; Flex children can have this `flex` property that has 2-3 values: (1) how much more space alloted than the siblings (2) width aka flex-basis */
}
.step .step-info {
    flex: 2 70%;
}
.step-info {

    display: flex;
    flex-wrap: wrap;
    align-items: center;

}

.step .step-img {
    max-width: 100%;
    flex: 1 12%;
}
.step .step-text {
    flex: 12;
}

.steps-text p {
    color: #39a6b2;
    font-size: 18px;
}

.steps-text h4 {
    font-size: 26px;
    line-height: 1.5;
    color: #024e76;
}

/* Apply styles to personal trainers section */
.trainers {
    color: #fce138;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: space-around;
}
.trainer {
    width: 100%;
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    margin: 20px;
    background: #024e76;
    color: #fce138;
    flex: 1;
}
.trainer img { 
    width: 100%;
}
.trainer-bio {
    padding: 35px;
    line-height: 1.3;
}
.trainer-bio h3 {
    font-size: 28px;
}
.trainer-bio h4 {
    font-weight: lighter; 
    font-size: 22px;
    margin-bottom: 14px;
}
.trainer-bio p {
    font-size: 17px;
}

/* Apply styles to Service Plans section */
.services {
  background: #fce138; 
}

.service-grid-wrapper {
    display: flex;
    width: 100%;
    justify-content: center;
}
.service-grid-container {
    background: lightyellow;
    width: 80%;
    display: grid;
    /* repeat(iterator, size) */
    grid-template-columns: 1fr repeat(2, 4fr);
    grid-template-rows: repeat(5, 1fr) 2fr;
    border: 2px solid #024e76;
    color:  #024e76;
    font-size: 1.2rem;
}
.service-grid-item {
    padding: 15px 0;
    border: 2px solid #024e76;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}
/* specific match */
.service-grid-item.basic {
    grid-column: 2 / span 1;
}
.service-grid-item.both {
    grid-column: 2 / span 2;
}
.service-grid-item.cancel {
    grid-row: 1 / -1;
    writing-mode: vertical-lr;
    grid-column: 1;
    grid-row: 1 / -1;
    transform: rotate(180deg);
}
.grid-head, .grid-price, .service-grid-item.cancel {
    font-size: 1.5rem;
    font-weight: bold;
}

/* Apply styles to Reach Out section */
.contact {
    margin: 0 auto;
    background-color: #024e76;
    overflow: auto;
}

.contact-info {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
}

.contact .section-title {
    color: #fce138;
}
.contact-info > * {
    flex: 1;
    margin: 15px;
  }
  
.contact-form iframe {
    border: none;
}
.contact .contact-info > div {
    color: white;
}
.contact-info h3 {
    color: #fce138;
    font-size: 32px;
  }
  
.contact-info p, .contact-info address {
    margin: 20px 0;
    line-height: 1.5;
    font-size: 16px;
    font-style: normal;
}

.contact-form input, .contact-form textarea {
    border: 1px solid #024e76;
    display: block;
    padding: 7px 15px;
    font-size: 16px;
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;
    margin-top: 5px;
}

.contact-form button {
    width: 100%;

    border: none;

    background: #fce138;

    color: #024e76;

    text-align: center;

    padding: 15px 0;

    font-size: 16px;
}

.contact-info a {
    color: #fce138;
}

/* Apply styles to <footer> */
footer {
    display: flex;
    background: #fce138;
    padding: 40px 35px;
    justify-content: space-between;
    flex-wrap: wrap;
}
footer h2 {
    color: #024e76;
    font-size: 30px;
    margin: 0;  
}
footer aside {
    line-height: 1.5; 
    text-align: right;
}
footer a {
    color: #024e76;
}

@media screen and (max-width: 980px) {
    header {
        padding-bottom: 0;
        justify-content: center;
    }

    header h1 {
        width: 100%;
        text-align: center;
    }

    header nav ul {
        margin-top: 20px;
        width: 100%;
        justify-content: center;
    }

    .hero-cta, .hero-form {
        width: 100%;
    }
    
    .hero-cta {
        text-align: center;
    }

    .section-title {
        width: 80%;
    }
    
    .trainer {
        flex: 0 70%;
    }
    
    .contact-info iframe{
        flex: 1 100%;
    }

    footer h2, footer div {
        text-align: center;
        width: 100%;
    }
}

@media screen and (max-width: 768px) {
    section {
      padding: 30px 15px;
    }
}

@media screen and (max-width: 768px) {

    section {
        padding: 30px 15px;
    }

    .step h3 {
        flex: 1 100%;
        text-align: center;
    }

    .step-info {
        flex: 2 100%;
        text-align: center;
        justify-content: center;
    }

    .step-img {
        flex: 0 32%;
        margin-right: 0;
        margin-top: 15px;
        margin-bottom: 15px;
    }

    .step-text {
        flex: 100%;  
    }

}


@media screen and (max-width: 575px) {
  
  .hero-form button {
    width: 100%;
  }

  .section-title {
    width: 95%;
  }

  .intro p {
    width: 100%;
  }

  .trainer {
    flex: 0 100%;
  }

  .contact-info {
    text-align: center;
  }

  .contact-info > * {
    flex: 0 100%;
  }

  .contact-form {
    order: 3;
  }
}

@media screen and (max-width: 768px) {

    .service-grid-container {
      grid-template-columns: 1fr 1fr;
    }
  
    .service-grid-item.basic {
      grid-column: 1;
    }
  
    .service-grid-item.both {
      grid-column: 1 / -1;
    }
  
    .service-grid-item.cancel {
      transform: none;
      writing-mode: unset;
      grid-column: 1 / -1;
      grid-row: -1;
    }
  }

  

